--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               </div>
         </section>
       </main>
-    <footer>
+    <!-- <footer>
         <div class=" text-center bg-black text-white p-2 mt-4">
         <h3>Influencer Products</h3>
         <p>Lorem <i class="far fa-copyright pe-2"></i>ipsum dolor sit amet.</p>
@@ -202,7 +202,7 @@
             <i class="fas fa-share"></i>
         </div>
     </div>
-    </footer>
+    </footer> -->
     
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
