--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body style="background-color: aquamarine;">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-lg-5">
+<body style="background-color: aquamarine;" >
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-lg-5 container">
         <div class="container">
           <a class="navbar-brand" href="#">Influencer gear</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
         </div>
       </nav>
 
-      <main>
+      <main class="container">
           <section class="container">
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-6">
